StyleFixes: Fixed vertical alignment on text inputs

--- a/client/Framework/themes/default/kd.input.styl
+++ b/client/Framework/themes/default/kd.input.styl
@@ -17,7 +17,7 @@ input.kdinput.text,textarea.kdinput.text
   border              1px solid #d7d7d7
   outline             none
   height              24px
-  line-height         20px
+  line-height         24px
   padding             2px 4px
   bg                  color,white
   rounded             4px
